# savvy

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  README.md  cli.py  docker-compose.yml  plan.md  pyproject.toml  start.sh
.claude/: settings.json  settings.local.json
.claude/agents/: architect.md  backend.md  frontend.md  rag.md
backend/: chat.py  ingest.py  main.py
frontend/: jest.config.js  jest.setup.ts  package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/__tests__/: chat.test.tsx  page.test.tsx
frontend/app/chat/: page.tsx
tests/: test_chat.py  test_ingest.py  test_ingest_tilde.py  test_main.py
