[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "savvy"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "llama-index>=0.10",
    "llama-index-llms-ollama>=0.1",
    "llama-index-embeddings-ollama>=0.1",
    "llama-index-vector-stores-chroma>=0.1",
    "chromadb>=0.5",
    "pymupdf>=1.24",
    "trafilatura>=1.9",
    "weasyprint>=62",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]
